# nixpkgs-meson-clang-repro

./: README.md  flake.nix  meson.build  package.nix
src/: main.cpp
